change app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Mayoka Catalog",
-  "name": "Mayoka Catalog",
+  "short_name": "Mayoka App",
+  "name": "Mayoka App",
   "icons": [
     {
       "src": "favicon.ico",
